@@ -11,6 +11,7 @@ MCDawn 1.0.1.5
 	-/zoneall - Fixed to work properly on non perfect cube levels.
 -Added Omni-Banning and Global-Banning for servers / consoles.
 -Map Editor/Viewer tab complete, added fCraft IsoCat Map Viewer.
+-On login, emails are now accepted as "valid names" (so the server won't kick the player, saying that it's an illegal name).
 	
 MCDawn 1.0.1.4
 -Building commands "throttle" redone, now goes on a scale of 1 to 200 (Determines how many blocks to set in 100 ms).
